src/snapshots/insta_fun__filter_sine.svg.snap
---
source: src/lib.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin">
  <path d="M 0.000000,95.000000 L 1.000000,94.997818 L 2.000000,94.987137 L 3.000000,94.960098 L 4.000000,94.909706 L 5.000000,94.829758 L 6.000000,94.714813 L 7.000000,94.560135 L 8.000000,94.361664 L 9.000000,94.115967 L 10.000000,93.820198 L 11.000000,93.472061 L 12.000000,93.069778 L 13.000000,92.612022 L 14.000000,92.097931 L 15.000000,91.527008 L 16.000000,90.899155 L 17.000000,90.214615 L 18.000000,89.473907 L 19.000000,88.677841 L 20.000000,87.827499 L 21.000000,86.924149 L 22.000000,85.969284 L 23.000000,84.964569 L 24.000000,83.911827 L 25.000000,82.812996 L 26.000000,81.670135 L 27.000000,80.485428 L 28.000000,79.261093 L 29.000000,77.999451 L 30.000000,76.702850 L 31.000000,75.373672 L 32.000000,74.014351 L 33.000000,72.627296 L 34.000000,71.214958 L 35.000000,69.779739 L 36.000000,68.324081 L 37.000000,66.850342 L 38.000000,65.360901 L 39.000000,63.858082 L 40.000000,62.344158 L 41.000000,60.821381 L 42.000000,59.291939 L 43.000000,57.757969 L 44.000000,56.221558 L 45.000000,54.684723 L 46.000000,53.149448 L 47.000000,51.617622 L 48.000000,50.091103 L 49.000000,48.571655 L 50.000000,47.061008 L 51.000000,45.560810 L 52.000000,44.072651 L 53.000000,42.598064 L 54.000000,41.138504 L 55.000000,39.695374 L 56.000000,38.270012 L 57.000000,36.863708 L 58.000000,35.477676 L 59.000000,34.113091 L 60.000000,32.771046 L 61.000000,31.452610 L 62.000000,30.158772 L 63.000000,28.890484 L 64.000000,27.648638 L 65.000000,26.434101 L 66.000000,25.247663 L 67.000000,24.090086 L 68.000000,22.962078 L 69.000000,21.864319 L 70.000000,20.797443 L 71.000000,19.762041 L 72.000000,18.758659 L 73.000000,17.787827 L 74.000000,16.850037 L 75.000000,15.945724 L 76.000000,15.075321 L 77.000000,14.239212 L 78.000000,13.437767 L 79.000000,12.671310 L 80.000000,11.940155 L 81.000000,11.244579 L 82.000000,10.584843 L 83.000000,9.961174 L 84.000000,9.373791 L 85.000000,8.822884 L 86.000000,8.308601 L 87.000000,7.831120 L 88.000000,7.390545 L 89.000000,6.986996 L 90.000000,6.620564 L 91.000000,6.291332 L 92.000000,5.999344 L 93.000000,5.744644 L 94.000000,5.527267 L 95.000000,5.347221 L 96.000000,5.204498 L 97.000000,5.099075 L 98.000000,5.030926 L 99.000000,5.000000 " fill="none" stroke="#4285F4" stroke-width="0.5"/>
  <text x="5" y="15" font-family="monospace" font-size="12" fill="#4285F4">Ch0</text>
</svg>
