src/snapshots/insta_fun__lowpass_impulse.svg.snap
---
source: src/lib.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 100" preserveAspectRatio="xMinYMin">
  <path d="M 0.000000,77.577919 L 1.000000,64.148315 L 2.000000,48.127911 L 3.000000,34.877968 L 4.000000,24.281885 L 5.000000,16.188305 L 6.000000,10.418583 L 7.000000,6.773792 L 8.000000,5.041176 L 9.000000,5.000000 L 10.000000,6.426785 L 11.000000,9.099918 L 12.000000,12.803558 L 13.000000,17.331020 L 14.000000,22.487402 L 15.000000,28.091759 L 16.000000,33.978657 L 17.000000,39.999233 L 18.000000,46.021854 L 19.000000,51.932293 L 20.000000,57.633583 L 21.000000,63.045578 L 22.000000,68.104225 L 23.000000,72.760658 L 24.000000,76.980095 L 25.000000,80.740631 L 26.000000,84.031952 L 27.000000,86.854004 L 28.000000,89.215584 L 29.000000,91.133072 L 30.000000,92.629059 L 31.000000,93.731117 L 32.000000,94.470627 L 33.000000,94.881668 L 34.000000,95.000000 L 35.000000,94.862198 L 36.000000,94.504829 L 37.000000,93.963760 L 38.000000,93.273590 L 39.000000,92.467148 L 40.000000,91.575104 L 41.000000,90.625687 L 42.000000,89.644463 L 43.000000,88.654221 L 44.000000,87.674896 L 45.000000,86.723572 L 46.000000,85.814529 L 47.000000,84.959366 L 48.000000,84.167122 L 49.000000,83.444443 L 50.000000,82.795792 L 51.000000,82.223610 L 52.000000,81.728592 L 53.000000,81.309875 L 54.000000,80.965271 L 55.000000,80.691467 L 56.000000,80.484253 L 57.000000,80.338737 L 58.000000,80.249481 L 59.000000,80.210716 L 60.000000,80.216484 L 61.000000,80.260773 L 62.000000,80.337624 L 63.000000,80.441284 L 64.000000,80.566231 L 65.000000,80.707268 L 66.000000,80.859612 L 67.000000,81.018867 L 68.000000,81.181114 L 69.000000,81.342873 L 70.000000,81.501160 L 71.000000,81.653435 L 72.000000,81.797607 L 73.000000,81.932037 L 74.000000,82.055466 L 75.000000,82.167015 L 76.000000,82.266144 L 77.000000,82.352646 L 78.000000,82.426529 L 79.000000,82.488083 L 80.000000,82.537781 L 81.000000,82.576248 L 82.000000,82.604248 L 83.000000,82.622635 L 84.000000,82.632339 L 85.000000,82.634323 L 86.000000,82.629585 L 87.000000,82.619095 L 88.000000,82.603821 L 89.000000,82.584671 L 90.000000,82.562546 L 91.000000,82.538239 L 92.000000,82.512505 L 93.000000,82.486023 L 94.000000,82.459396 L 95.000000,82.433136 L 96.000000,82.407692 L 97.000000,82.383453 L 98.000000,82.360703 L 99.000000,82.339676 L 100.000000,82.320557 L 101.000000,82.303436 L 102.000000,82.288376 L 103.000000,82.275391 L 104.000000,82.264458 L 105.000000,82.255508 L 106.000000,82.248436 L 107.000000,82.243141 L 108.000000,82.239487 L 109.000000,82.237320 L 110.000000,82.236481 L 111.000000,82.236816 L 112.000000,82.238159 L 113.000000,82.240356 L 114.000000,82.243256 L 115.000000,82.246689 L 116.000000,82.250549 L 117.000000,82.254684 L 118.000000,82.258987 L 119.000000,82.263359 L 120.000000,82.267700 L 121.000000,82.271942 L 122.000000,82.276001 L 123.000000,82.279846 L 124.000000,82.283417 L 125.000000,82.286682 L 126.000000,82.289635 L 127.000000,82.292252 L 128.000000,82.294510 L 129.000000,82.296448 L 130.000000,82.298050 L 131.000000,82.299339 L 132.000000,82.300323 L 133.000000,82.301041 L 134.000000,82.301491 L 135.000000,82.301712 L 136.000000,82.301743 L 137.000000,82.301590 L 138.000000,82.301285 L 139.000000,82.300850 L 140.000000,82.300323 L 141.000000,82.299713 L 142.000000,82.299049 L 143.000000,82.298355 L 144.000000,82.297638 L 145.000000,82.296921 L 146.000000,82.296219 L 147.000000,82.295540 L 148.000000,82.294891 L 149.000000,82.294289 L 150.000000,82.293732 L 151.000000,82.293228 L 152.000000,82.292770 L 153.000000,82.292381 L 154.000000,82.292038 L 155.000000,82.291748 L 156.000000,82.291519 L 157.000000,82.291336 L 158.000000,82.291199 L 159.000000,82.291115 L 160.000000,82.291061 L 161.000000,82.291046 L 162.000000,82.291054 L 163.000000,82.291100 L 164.000000,82.291153 L 165.000000,82.291237 L 166.000000,82.291336 L 167.000000,82.291443 L 168.000000,82.291550 L 169.000000,82.291672 L 170.000000,82.291786 L 171.000000,82.291901 L 172.000000,82.292015 L 173.000000,82.292122 L 174.000000,82.292221 L 175.000000,82.292320 L 176.000000,82.292404 L 177.000000,82.292480 L 178.000000,82.292557 L 179.000000,82.292618 L 180.000000,82.292664 L 181.000000,82.292709 L 182.000000,82.292740 L 183.000000,82.292770 L 184.000000,82.292786 L 185.000000,82.292793 L 186.000000,82.292801 L 187.000000,82.292801 L 188.000000,82.292793 L 189.000000,82.292786 L 190.000000,82.292770 L 191.000000,82.292755 L 192.000000,82.292740 L 193.000000,82.292725 L 194.000000,82.292709 L 195.000000,82.292686 L 196.000000,82.292664 L 197.000000,82.292648 L 198.000000,82.292633 L 199.000000,82.292610 L 200.000000,82.292595 L 201.000000,82.292580 L 202.000000,82.292572 L 203.000000,82.292557 L 204.000000,82.292542 L 205.000000,82.292542 L 206.000000,82.292526 L 207.000000,82.292526 L 208.000000,82.292519 L 209.000000,82.292511 L 210.000000,82.292511 L 211.000000,82.292511 L 212.000000,82.292511 L 213.000000,82.292511 L 214.000000,82.292511 L 215.000000,82.292511 L 216.000000,82.292519 L 217.000000,82.292519 L 218.000000,82.292526 L 219.000000,82.292526 L 220.000000,82.292526 L 221.000000,82.292526 L 222.000000,82.292542 L 223.000000,82.292542 L 224.000000,82.292542 L 225.000000,82.292542 L 226.000000,82.292542 L 227.000000,82.292542 L 228.000000,82.292557 L 229.000000,82.292557 L 230.000000,82.292557 L 231.000000,82.292557 L 232.000000,82.292557 L 233.000000,82.292557 L 234.000000,82.292557 L 235.000000,82.292557 L 236.000000,82.292557 L 237.000000,82.292557 L 238.000000,82.292557 L 239.000000,82.292557 L 240.000000,82.292557 L 241.000000,82.292557 L 242.000000,82.292557 L 243.000000,82.292557 L 244.000000,82.292557 L 245.000000,82.292557 L 246.000000,82.292557 L 247.000000,82.292557 L 248.000000,82.292557 L 249.000000,82.292557 L 250.000000,82.292557 L 251.000000,82.292557 L 252.000000,82.292557 L 253.000000,82.292557 L 254.000000,82.292557 L 255.000000,82.292557 L 256.000000,82.292557 L 257.000000,82.292557 L 258.000000,82.292557 L 259.000000,82.292557 L 260.000000,82.292557 L 261.000000,82.292557 L 262.000000,82.292557 L 263.000000,82.292557 L 264.000000,82.292557 L 265.000000,82.292557 L 266.000000,82.292557 L 267.000000,82.292557 L 268.000000,82.292557 L 269.000000,82.292557 L 270.000000,82.292557 L 271.000000,82.292557 L 272.000000,82.292557 L 273.000000,82.292557 L 274.000000,82.292557 L 275.000000,82.292557 L 276.000000,82.292557 L 277.000000,82.292557 L 278.000000,82.292557 L 279.000000,82.292557 L 280.000000,82.292557 L 281.000000,82.292557 L 282.000000,82.292557 L 283.000000,82.292557 L 284.000000,82.292557 L 285.000000,82.292557 L 286.000000,82.292557 L 287.000000,82.292557 L 288.000000,82.292557 L 289.000000,82.292557 L 290.000000,82.292557 L 291.000000,82.292557 L 292.000000,82.292557 L 293.000000,82.292557 L 294.000000,82.292557 L 295.000000,82.292557 L 296.000000,82.292557 L 297.000000,82.292557 L 298.000000,82.292557 L 299.000000,82.292557 " fill="none" stroke="#4285F4" stroke-width="0.5"/>
  <text x="5" y="15" font-family="monospace" font-size="12" fill="#4285F4">Ch0</text>
</svg>
