src/snapshots/insta_fun__net.svg.snap
---
source: src/lib.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 420 100" preserveAspectRatio="xMinYMin">
  <path d="M 0.000000,50.072067 L 1.000000,50.202389 L 2.000000,50.464104 L 3.000000,50.857727 L 4.000000,51.382469 L 5.000000,52.036297 L 6.000000,52.816021 L 7.000000,53.717373 L 8.000000,54.735085 L 9.000000,55.862957 L 10.000000,57.093964 L 11.000000,58.420307 L 12.000000,59.833515 L 13.000000,61.324501 L 14.000000,62.883667 L 15.000000,64.500946 L 16.000000,66.165924 L 17.000000,67.867874 L 18.000000,69.595848 L 19.000000,71.338737 L 20.000000,73.085365 L 21.000000,74.824516 L 22.000000,76.545044 L 23.000000,78.235901 L 24.000000,79.886215 L 25.000000,81.485352 L 26.000000,83.022949 L 27.000000,84.488976 L 28.000000,85.873810 L 29.000000,87.168243 L 30.000000,88.363541 L 31.000000,89.451523 L 32.000000,90.424492 L 33.000000,91.275406 L 34.000000,91.997810 L 35.000000,92.585876 L 36.000000,93.034485 L 37.000000,93.339172 L 38.000000,93.496185 L 39.000000,93.502502 L 40.000000,93.355835 L 41.000000,93.054596 L 42.000000,92.597977 L 43.000000,91.985870 L 44.000000,91.218948 L 45.000000,90.298576 L 46.000000,89.226860 L 47.000000,88.006607 L 48.000000,86.641327 L 49.000000,85.135178 L 50.000000,83.493011 L 51.000000,81.720276 L 52.000000,79.823029 L 53.000000,77.807938 L 54.000000,75.682175 L 55.000000,73.453430 L 56.000000,71.129906 L 57.000000,68.720207 L 58.000000,66.233360 L 59.000000,63.678757 L 60.000000,61.066113 L 61.000000,58.405407 L 62.000000,55.706886 L 63.000000,52.980965 L 64.000000,50.238216 L 65.000000,47.489323 L 66.000000,44.745022 L 67.000000,42.016068 L 68.000000,39.313171 L 69.000000,36.646992 L 70.000000,34.028046 L 71.000000,31.466692 L 72.000000,28.973091 L 73.000000,26.557138 L 74.000000,24.228456 L 75.000000,21.996305 L 76.000000,19.869614 L 77.000000,17.856892 L 78.000000,15.966202 L 79.000000,14.205139 L 80.000000,12.580788 L 81.000000,11.099709 L 82.000000,9.767891 L 83.000000,8.590736 L 84.000000,7.573059 L 85.000000,6.719032 L 86.000000,6.032177 L 87.000000,5.515366 L 88.000000,5.170803 L 89.000000,5.000000 L 90.000000,5.003799 L 91.000000,5.182327 L 92.000000,5.535053 L 93.000000,6.060726 L 94.000000,6.757427 L 95.000000,7.622559 L 96.000000,8.652851 L 97.000000,9.844379 L 98.000000,11.192589 L 99.000000,12.692295 L 100.000000,14.337723 L 101.000000,16.122505 L 102.000000,18.039715 L 103.000000,20.081938 L 104.000000,22.241213 L 105.000000,24.509155 L 106.000000,26.876923 L 107.000000,29.335291 L 108.000000,31.874660 L 109.000000,34.485123 L 110.000000,37.156467 L 111.000000,39.878265 L 112.000000,42.639870 L 113.000000,45.430470 L 114.000000,48.239140 L 115.000000,51.054890 L 116.000000,53.866692 L 117.000000,56.663517 L 118.000000,59.434414 L 119.000000,62.168510 L 120.000000,64.855103 L 121.000000,67.483635 L 122.000000,70.043800 L 123.000000,72.525566 L 124.000000,74.919174 L 125.000000,77.215256 L 126.000000,79.404762 L 127.000000,81.479134 L 128.000000,83.430191 L 129.000000,85.250305 L 130.000000,86.932297 L 131.000000,88.469574 L 132.000000,89.856094 L 133.000000,91.086411 L 134.000000,92.155670 L 135.000000,93.059692 L 136.000000,93.794907 L 137.000000,94.358414 L 138.000000,94.748016 L 139.000000,94.962158 L 140.000000,95.000000 L 141.000000,94.861389 L 142.000000,94.546852 L 143.000000,94.057632 L 144.000000,93.395630 L 145.000000,92.563454 L 146.000000,91.564354 L 147.000000,90.402252 L 148.000000,89.081711 L 149.000000,87.607910 L 150.000000,85.986633 L 151.000000,84.224228 L 152.000000,82.327637 L 153.000000,80.304291 L 154.000000,78.162125 L 155.000000,75.909561 L 156.000000,73.555435 L 157.000000,71.109001 L 158.000000,68.579857 L 159.000000,65.977928 L 160.000000,63.313442 L 161.000000,60.596859 L 162.000000,57.838840 L 163.000000,55.050228 L 164.000000,52.241962 L 165.000000,49.425076 L 166.000000,46.610638 L 167.000000,43.809685 L 168.000000,41.033241 L 169.000000,38.292198 L 170.000000,35.597321 L 171.000000,32.959198 L 172.000000,30.388187 L 173.000000,27.894392 L 174.000000,25.487598 L 175.000000,23.177271 L 176.000000,20.972479 L 177.000000,18.881886 L 178.000000,16.913700 L 179.000000,15.075649 L 180.000000,13.374962 L 181.000000,11.818314 L 182.000000,10.411812 L 183.000000,9.160995 L 184.000000,8.070770 L 185.000000,7.145428 L 186.000000,6.388584 L 187.000000,5.803226 L 188.000000,5.391655 L 189.000000,5.155476 L 190.000000,5.095615 L 191.000000,5.212330 L 192.000000,5.505146 L 193.000000,5.972908 L 194.000000,6.613789 L 195.000000,7.425259 L 196.000000,8.404148 L 197.000000,9.546593 L 198.000000,10.848118 L 199.000000,12.303600 L 200.000000,13.907333 L 201.000000,15.653000 L 202.000000,17.533760 L 203.000000,19.542213 L 204.000000,21.670477 L 205.000000,23.910185 L 206.000000,26.252542 L 207.000000,28.688347 L 208.000000,31.208019 L 209.000000,33.801674 L 210.000000,36.459114 L 211.000000,39.169907 L 212.000000,41.923397 L 213.000000,44.708763 L 214.000000,47.515079 L 215.000000,50.331299 L 216.000000,53.146370 L 217.000000,55.949238 L 218.000000,58.728878 L 219.000000,61.474384 L 220.000000,64.174957 L 221.000000,66.820000 L 222.000000,69.399117 L 223.000000,71.902168 L 224.000000,74.319336 L 225.000000,76.641098 L 226.000000,78.858368 L 227.000000,80.962402 L 228.000000,82.944962 L 229.000000,84.798233 L 230.000000,86.514954 L 231.000000,88.088379 L 232.000000,89.512314 L 233.000000,90.781174 L 234.000000,91.889969 L 235.000000,92.834358 L 236.000000,93.610611 L 237.000000,94.215691 L 238.000000,94.647217 L 239.000000,94.903488 L 240.000000,94.983505 L 241.000000,94.886963 L 242.000000,94.614212 L 243.000000,94.166351 L 244.000000,93.545128 L 245.000000,92.752991 L 246.000000,91.793045 L 247.000000,90.669060 L 248.000000,89.385452 L 249.000000,87.947281 L 250.000000,86.360168 L 251.000000,84.630371 L 252.000000,82.764679 L 253.000000,80.770424 L 254.000000,78.655434 L 255.000000,76.428024 L 256.000000,74.096939 L 257.000000,71.671341 L 258.000000,69.160759 L 259.000000,66.575058 L 260.000000,63.924393 L 261.000000,61.219181 L 262.000000,58.470051 L 263.000000,55.687798 L 264.000000,52.883358 L 265.000000,50.067741 L 266.000000,47.252018 L 267.000000,44.447247 L 268.000000,41.664444 L 269.000000,38.914547 L 270.000000,36.208355 L 271.000000,33.556503 L 272.000000,30.969406 L 273.000000,28.457232 L 274.000000,26.029850 L 275.000000,23.696789 L 276.000000,21.467224 L 277.000000,19.349909 L 278.000000,17.353172 L 279.000000,15.484840 L 280.000000,13.752262 L 281.000000,12.162251 L 282.000000,10.721046 L 283.000000,9.434303 L 284.000000,8.307087 L 285.000000,7.343834 L 286.000000,6.548309 L 287.000000,5.923653 L 288.000000,5.472317 L 289.000000,5.196060 L 290.000000,5.095985 L 291.000000,5.172470 L 292.000000,5.425236 L 293.000000,5.853275 L 294.000000,6.454906 L 295.000000,7.227757 L 296.000000,8.168812 L 297.000000,9.274364 L 298.000000,10.540066 L 299.000000,11.960945 L 300.000000,13.531425 L 301.000000,15.245335 L 302.000000,17.095943 L 303.000000,19.075975 L 304.000000,21.177647 L 305.000000,23.392717 L 306.000000,25.712469 L 307.000000,28.127792 L 308.000000,30.629210 L 309.000000,33.206871 L 310.000000,35.850666 L 311.000000,38.550213 L 312.000000,41.294884 L 313.000000,44.073921 L 314.000000,46.876396 L 315.000000,49.691296 L 316.000000,52.507561 L 317.000000,55.314133 L 318.000000,58.099983 L 319.000000,60.854164 L 320.000000,63.565865 L 321.000000,66.224419 L 322.000000,68.819389 L 323.000000,71.340576 L 324.000000,73.778084 L 325.000000,76.122330 L 326.000000,78.364105 L 327.000000,80.494598 L 328.000000,82.505447 L 329.000000,84.388748 L 330.000000,86.137100 L 331.000000,87.743637 L 332.000000,89.202049 L 333.000000,90.506607 L 334.000000,91.652176 L 335.000000,92.634262 L 336.000000,93.449013 L 337.000000,94.093216 L 338.000000,94.564354 L 339.000000,94.860565 L 340.000000,94.980690 L 341.000000,94.924248 L 342.000000,94.691475 L 343.000000,94.283279 L 344.000000,93.701263 L 345.000000,92.947708 L 346.000000,92.025597 L 347.000000,90.938522 L 348.000000,89.690773 L 349.000000,88.287247 L 350.000000,86.733459 L 351.000000,85.035515 L 352.000000,83.200073 L 353.000000,81.234367 L 354.000000,79.146103 L 355.000000,76.943489 L 356.000000,74.635170 L 357.000000,72.230232 L 358.000000,69.738113 L 359.000000,67.168602 L 360.000000,64.531799 L 361.000000,61.838062 L 362.000000,59.097969 L 363.000000,56.322292 L 364.000000,53.521931 L 365.000000,50.707890 L 366.000000,47.891220 L 367.000000,45.082996 L 368.000000,42.294239 L 369.000000,39.535915 L 370.000000,36.818851 L 371.000000,34.153732 L 372.000000,31.551022 L 373.000000,29.020947 L 374.000000,26.573452 L 375.000000,24.218140 L 376.000000,21.964279 L 377.000000,19.820717 L 378.000000,17.795868 L 379.000000,15.897697 L 380.000000,14.133663 L 381.000000,12.510685 L 382.000000,11.035149 L 383.000000,9.712845 L 384.000000,8.548977 L 385.000000,7.548111 L 386.000000,6.714172 L 387.000000,6.050453 L 388.000000,5.559551 L 389.000000,5.243393 L 390.000000,5.103226 L 391.000000,5.139603 L 392.000000,5.352379 L 393.000000,5.740707 L 394.000000,6.303078 L 395.000000,7.037266 L 396.000000,7.940411 L 397.000000,9.008930 L 398.000000,10.238655 L 399.000000,11.624752 L 400.000000,13.161758 L 401.000000,14.843655 L 402.000000,16.663811 L 403.000000,18.615103 L 404.000000,20.689844 L 405.000000,22.879890 L 406.000000,25.176638 L 407.000000,27.571068 L 408.000000,30.053768 L 409.000000,32.614990 L 410.000000,35.244663 L 411.000000,37.932465 L 412.000000,40.667824 L 413.000000,43.440010 L 414.000000,46.238117 L 415.000000,49.051163 L 416.000000,51.868088 L 417.000000,54.677834 L 418.000000,57.469353 L 419.000000,60.231689 " fill="none" stroke="#4285F4" stroke-width="0.5"/>
  <text x="5" y="15" font-family="monospace" font-size="12" fill="#4285F4">Ch0</text>
</svg>
