src/snapshots/insta_fun__short_sine.snap
---
source: src/lib.rs
expression: svg.as_bytes().to_vec()
extension: svg
snapshot_kind: binary
---
